# tauri-plugin-macos-passkey

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  build.rs
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: login_passkey.toml  register_passkey.toml
permissions/schemas/: schema.json
src/: lib.rs
src/macos/: blocking.rs  commands.rs  mod.rs
swift-lib/: Package.resolved  Package.swift
swift-lib/Sources/PasskeyBridge/: ApplePasskeyHandler.swift  Exports.swift
